@@ -154,6 +154,8 @@ public abstract class ExistingRecordDataIterator extends WrapperDataIterator
     @Override
     public Object get(int i)
     {
+        assert(i <= existingColIndex) : "ExistingCol should be the last column.";
+
         if (i<existingColIndex)
             return _delegate.get(i);
         Integer rowNumber = asInteger(_delegate.get(0));
@@ -202,7 +204,7 @@ public abstract class ExistingRecordDataIterator extends WrapperDataIterator
 
     protected void checkDuplicateKeys(List<String> pkKeys)
     {
-        Object pkKeysObj = pkKeys.size() == 1 ? pkKeys.get(0) : pkKeys;
+        Object pkKeysObj = pkKeys.size() == 1 ? pkKeys.getFirst() : pkKeys;
         if (_pkKeysSeen.contains(pkKeysObj))
             _context.getErrors().addRowError(new ValidationException("Duplicate key provided: " + StringUtils.join(pkKeys, ", ")));
         _pkKeysSeen.add(pkKeysObj);
