@@ -40,7 +40,6 @@ import org.labkey.api.action.NullSafeBindException;
 import org.labkey.api.assay.AssayFileWriter;
 import org.labkey.api.data.Container;
 import org.labkey.api.exp.api.ExpRun;
-import org.labkey.api.gwt.client.util.PropertyUtil;
 import org.labkey.api.pipeline.file.FileAnalysisJobSupport;
 import org.labkey.api.query.FieldKey;
 import org.labkey.api.query.QueryKey;
@@ -825,13 +824,13 @@ abstract public class PipelineJob extends Job implements Serializable, Container
             try
             {
                 logStartStopInfo("Starting to run task '" + factory.getId() + "' for job '" + this + "' with log file " + getLogFilePath());
-                getLogger().info("Starting to run task '" + factory.getId() + "' at location '" + factory.getExecutionLocation() + "'");
+                getLogger().info("Starting to run task '{}' at location '{}'", factory.getId(), factory.getExecutionLocation());
                 if (PipelineJobService.get().getLocationType() != PipelineJobService.LocationType.WebServer)
                 {
                     PipelineJobService.RemoteServerProperties remoteProps = PipelineJobService.get().getRemoteServerProperties();
                     if (remoteProps != null)
                     {
-                        getLogger().info("on host: '" + remoteProps.getHostName() + "'");
+                        getLogger().info("on host: '{}'", remoteProps.getHostName());
                     }
                 }
 
@@ -846,7 +845,7 @@ abstract public class PipelineJob extends Job implements Serializable, Container
             }
             finally
             {
-                getLogger().info((success ? "Successfully completed" : "Failed to complete") + " task '" + factory.getId() + "'");
+                getLogger().info("{} task '{}'", success ? "Successfully completed" : "Failed to complete", factory.getId());
                 logStartStopInfo((success ? "Successfully completed" : "Failed to complete") + " task '" + factory.getId() + "' for job '" + this + "' with log file " + getLogFile());
 
                 try
@@ -887,7 +886,7 @@ abstract public class PipelineJob extends Job implements Serializable, Container
         else
         {
             logStartStopInfo("Skipping already completed task '" + factory.getId() + "' for job '" + this + "' with log file " + getLogFile());
-            getLogger().info("Skipping already completed task '" + factory.getId() + "' at location '" + factory.getExecutionLocation() + "'");
+            getLogger().info("Skipping already completed task '{}' at location '{}'", factory.getId(), factory.getExecutionLocation());
         }
 
         if (getActiveTaskStatus() != TaskStatus.complete && getActiveTaskStatus() != TaskStatus.cancelled)
@@ -1280,7 +1279,7 @@ abstract public class PipelineJob extends Job implements Serializable, Container
     {
         Process proc;
 
-        String commandName = pb.command().get(0);
+        String commandName = pb.command().getFirst();
         commandName = commandName.substring(
                 Math.max(commandName.lastIndexOf('/'), commandName.lastIndexOf('\\')) + 1);
         header(commandName + " output");
@@ -1302,7 +1301,7 @@ abstract public class PipelineJob extends Job implements Serializable, Container
 
             // If the command has a path, then prepend its parent directory to the PATH
             // environment variable as well.
-            String exePath = pb.command().get(0);
+            String exePath = pb.command().getFirst();
             if (exePath != null && !exePath.isEmpty() && exePath.indexOf(File.separatorChar) != -1)
             {
                 File fileExe = new File(exePath);
@@ -1402,7 +1401,7 @@ abstract public class PipelineJob extends Job implements Serializable, Container
                     int result = proc.exitValue();
                     if (result != 0)
                     {
-                        throw new ToolExecutionException("Failed running " + pb.command().get(0) + ", exit code " + result, result);
+                        throw new ToolExecutionException("Failed running " + pb.command().getFirst() + ", exit code " + result, result);
                     }
 
                     int count = output.get();
@@ -1977,28 +1976,28 @@ abstract public class PipelineJob extends Job implements Serializable, Container
     {
         PipelineJob job1 = this;
         List<String> errors = new ArrayList<>();
-        if (!PropertyUtil.nullSafeEquals(job1._activeTaskId, job2._activeTaskId))
+        if (!Objects.equals(job1._activeTaskId, job2._activeTaskId))
             errors.add("_activeTaskId");
         if (job1._activeTaskRetries != job2._activeTaskRetries)
             errors.add("_activeTaskRetries");
-        if (!PropertyUtil.nullSafeEquals(job1._activeTaskStatus, job2._activeTaskStatus))
+        if (!Objects.equals(job1._activeTaskStatus, job2._activeTaskStatus))
             errors.add("_activeTaskStatus");
         if (job1._errors != job2._errors)
             errors.add("_errors");
         if (job1._interrupted != job2._interrupted)
             errors.add("_interrupted");
-        if (!PropertyUtil.nullSafeEquals(job1._jobGUID, job2._jobGUID))
+        if (!Objects.equals(job1._jobGUID, job2._jobGUID))
             errors.add("_jobGUID");
-        if (!PropertyUtil.nullSafeEquals(job1._logFile, job2._logFile))
+        if (!Objects.equals(job1._logFile, job2._logFile))
         {
             if (null == job1._logFile || null == job2._logFile)
                 errors.add("_logFile");
             else if (!FileUtil.getAbsoluteCaseSensitiveFile(job1._logFile.toFile()).getAbsolutePath().equalsIgnoreCase(FileUtil.getAbsoluteCaseSensitiveFile(job2._logFile.toFile()).getAbsolutePath()))
                 errors.add("_logFile");
         }
-        if (!PropertyUtil.nullSafeEquals(job1._parentGUID, job2._parentGUID))
+        if (!Objects.equals(job1._parentGUID, job2._parentGUID))
             errors.add("_parentGUID");
-        if (!PropertyUtil.nullSafeEquals(job1._provider, job2._provider))
+        if (!Objects.equals(job1._provider, job2._provider))
             errors.add("_provider");
         if (job1._submitted != job2._submitted)
             errors.add("_submitted");
